<?xml version="1.0" encoding="utf-8"?>



<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:fadingEdge="horizontal">

    <GridLayout
        android:id="@+id/newscreen"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:columnCount="3"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:rowCount="9"
        tools:context="com.example.rodger.tictactoe.Game"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/playerstext"
            android:layout_width="105dp"
            android:layout_height="75dp"
            android:layout_row="3"
            android:layout_column="1"
            android:gravity="center"
            android:text="P1|P2"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:text="P1|P2" />

        <Button
            android:id="@+id/restartbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="8"
            android:layout_column="1"
            android:layout_gravity="bottom"
            android:text="@string/Rbutton"
            android:textSize="18sp" />

        <Button
            android:id="@+id/bottomleftbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_gravity="center"
            android:width="100sp"
            android:height="100dp"
            android:text="@string/BLbutton"
            android:textSize="36sp" />

        <Button
            android:id="@+id/centerleftbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="center"
            android:width="100sp"
            android:height="100dp"
            android:text="@string/CLbutton"
            android:textSize="36sp" />

        <Button
            android:id="@+id/bottomcenterbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_gravity="center"
            android:width="100sp"
            android:height="100dp"
            android:text="@string/BCbutton"
            android:textSize="36sp" />

        <Button
            android:id="@+id/centerbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_gravity="center"
            android:width="100sp"
            android:height="100dp"
            android:text="@string/Cbutton"
            android:textSize="36sp" />

        <Button
            android:id="@+id/bottomrightbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_gravity="center"
            android:width="100sp"
            android:height="100dp"
            android:text="@string/BRbutton"
            android:textSize="36sp" />

        <Button
            android:id="@+id/centerrightbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_gravity="center"
            android:width="100sp"
            android:height="100dp"
            android:text="@string/CRbutton"
            android:textSize="36sp" />

        <Button
            android:id="@+id/topcenterbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="center"
            android:width="100sp"
            android:height="100dp"
            android:text="@string/TCbutton"
            android:textSize="36sp" />

        <Button
            android:id="@+id/toprightbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_gravity="center"
            android:width="100sp"
            android:height="100dp"
            android:text="@string/TRbutton"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/showp1s"
            android:layout_width="115dp"
            android:layout_height="75dp"
            android:layout_row="3"
            android:layout_column="0"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/topleftbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"

            android:layout_column="0"
            android:layout_gravity="center"
            android:width="100sp"
            android:height="100dp"
            android:text="@string/TLbutton"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/showp2s"
            android:layout_width="115dp"
            android:layout_height="75dp"
            android:layout_row="3"
            android:layout_column="2"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/scorebutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="8"
            android:layout_column="2"
            android:text="@string/scorebutton" />

    </GridLayout>

</GridLayout>

