<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ngscreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_purple"
    tools:context="com.example.tic_tac_toe.StartNewGame">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="718dp"
        android:foregroundGravity="fill"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="0dp">

        <Button
            android:id="@+id/startgamebutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/p1name"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="121dp"
            android:gravity="center"
            android:text="@string/startgamebutton"
            android:textAlignment="center"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="187dp"
            tools:text="Start New Game" />

        <EditText
            android:id="@+id/p1name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="38dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@string/player1name"
            android:textAlignment="center"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="43dp"
            tools:text="Player 1 Name" />

        <EditText
            android:id="@+id/p2name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/p1name"
            android:layout_marginTop="46dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@string/player2name"
            android:textAlignment="center"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="113dp"
            tools:text="Player 2 Name"
            android:layout_centerHorizontal="true"/>

        <ImageView
            android:id="@+id/gifimage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/startgamebutton"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="72dp"
            android:contentDescription="@string/startimage"
            app:srcCompat="@drawable/getready2" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
